--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "clsx": "^2.0.0",
     "lucide-react": "^0.292.0",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
@@ -25,6 +26,7 @@
   "devDependencies": {
     "@types/node": "^20.8.10",
     "@types/react": "^18.2.15",
+    "@types/react-beautiful-dnd": "^13.1.6",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
